--- a/index.html
+++ b/index.html
@@ -11,22 +11,30 @@
   </head>
   <body class="zoomContainer">
     <div id="a" class="zoomTarget level0">
-      <div id="a1" class="zoomTarget level1">
-        <div id="heading 1" class="heading">a1</div>
-        <div id="a11" class="zoomTarget level2">a11</div>
-        <div id="a12" class="zoomTarget level2">a12</div>
-        <div id="a13" class="zoomTarget level2">a13</div>
-        <div id="a14" class="zoomTarget level2">a14</div>
+
+      <div id="Chapter1" class="zoomTarget shape level1">
+        <div id="Kitchen" class="zoomTarget shape shape-rotation level2">This is the kitchen</div>
       </div>
-      <div id="a2" class="zoomTarget level1">
-        <div id="b11" class="zoomTarget level2">b11
-          <a onclick="goTo('a11');" href="#"> Click here to go to a totally different branch </a>
+
+      <div id="Chapter2" class="zoomTarget level1">
+
+        <div id="WakeUp" class="zoomTarget level2">
+          <img src="images/wakeup.jpg" alt="wakeup clipart" height="368" width="368">
+          <br/>
+          You wake up.  You're in your bedroom.
+          <br/>
+          Where do you want to go first?
+          <br/>
+
+          <a id="linkToKitchen" onclick="goTo('a11');" href="#"> The kitchen </a>
+          <br/>
+          <a id="linkToBathroom" onclick="goTo('a11');" href="#"> The bathroom </a>
+          <br/>
+          <a id="linkToOutside" onclick="goTo('a11');" href="#"> Outside </a>
         </div>
-        <div id="b12" class="zoomTarget level2">b12</div>
-        <div id="b13" class="zoomTarget level2">b13</div>
+        <div id="Bathroom" class="zoomTarget level2">You're in the bathroom</div>
+        <div id="Outside" class="zoomTarget level2">It's a beautiful day!</div>
       </div>
-      <div id="a3" class="zoomTarget level1">b3</div>
-      <div id="a4" class="zoomTarget level1">b4</div>
     </div>
   </body>
 
