--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
           Where do you want to go first?
           <br/>
 
-          <a id="linkToKitchen" onclick="goTo('a11');" href="#"> The kitchen </a>
+          <go-to location="#Kitchen"> The kitchen </go-to>
           <br/>
-          <a id="linkToBathroom" onclick="goTo('a11');" href="#"> The bathroom </a>
+          <go-to location="#Bathroom"> The Bathroom </go-to>
           <br/>
-          <a id="linkToOutside" onclick="goTo('a11');" href="#"> Outside </a>
+          <go-to location="#Outside"> Outside </go-to>
         </div>
+
         <div id="Bathroom" class="zoomTarget level2">You're in the bathroom</div>
+
         <div id="Outside" class="zoomTarget level2">It's a beautiful day!</div>
       </div>
     </div>
