--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>LudumDare</title>
+
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
+
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" type="text/javascript"></script>
