add Ubuntu light font

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>LudumDare</title>
 
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:regular,bold&subset=Latin">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Ubuntu:light&subset=Latin">
 
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 
