add functionality to change scene without changing location

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div id="Kitchen" class="zoomTarget shape shape-rotation level2">This is the kitchen</div>
 
       <div id="WakeUp" class="zoomTarget level2 scene-container">
-        <div part="0" class="story-scene">
+        <div class="story-scene">
           <img src="images/bgtest.png" class="illustration" alt="cool picture">
           <p>
           You wake up.  You're in your bedroom.
@@ -27,7 +27,7 @@
           </p>
         </div>
 
-        <div part="1" class="story-scene">
+        <div class="story-scene">
           <img src="images/GenericCircle.png" class="illustration" alt="cool picture">
           <p>
           You wake up.  You're in your bedroom.
