put in the intro

--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
         </div>
       </div>
 
-      <div id="WakeUp" class="zoomTarget level2 scene-container">
+      <div id="Intro" class="zoomTarget level2 scene-container">
         <div class="scene">
           <img src="images/bgtest.png" class="illustration" alt="cool picture">
           <div class="text">
             <p>
-            You wake up.  You're in your bedroom.
-
-            You are tired and groggy.
+            As the official historian for a new colony world its your privilege to record the events and preserve the unique heritage of what will no doubt be a thriving and successful community. Boundless opportunity and a place in history are with in your reach as you work side by side with your fellow colonists. I envy you a bright future on the colony world XB-137, surely in no time at all...
             </p>
           </div>
         </div>
@@ -37,15 +35,14 @@
           <img src="images/GenericCircle.png" class="illustration" alt="cool picture">
           <div class="text">
             <p>
-
-            Where do you want to go first?
+            Ugh, official messages from the central worlds can be so overwrought; do they expect anyone to actually read them?  You are too busy for this nonsense, you have a mandatory session with the Health and Wellness Android today and you have profiles on the Colony Biologist and Pastor to get started on.
             </p>
 
-            <go-to location="#Kitchen"> The kitchen </go-to>
+            <go-to location="#Kitchen"> Android </go-to>
             <br/>
-            <go-to location="#Bathroom"> The Bathroom </go-to>
+            <go-to location="#Bathroom"> Biologist </go-to>
             <br/>
-            <go-to location="#Outside"> Outside </go-to>
+            <go-to location="#Outside"> Pastor </go-to>
           </div>
         </div>
 
