change some styles

--- a/index.html
+++ b/index.html
@@ -15,9 +15,21 @@
   </head>
   <body class="zoomContainer">
     <div id="a" class="zoomTarget level0">
-      <div id="Kitchen" class="zoomTarget shape shape-rotation level2">
+      <div id="Android" class="zoomTarget shape shape-rotation-left level2">
         <div class="text">
           This is the kitchen
+        </div>
+      </div>
+
+      <div id="Biologist" class="zoomTarget shape shape-rotation-left level2">
+        <div class="text">
+          You're in the bathroom
+        </div>
+      </div>
+
+      <div id="Pastor" class="zoomTarget shape shape-rotation-left level2">
+        <div class="text">
+          It's a beautiful day!
         </div>
       </div>
 
@@ -38,28 +50,34 @@
             Ugh, official messages from the central worlds can be so overwrought; do they expect anyone to actually read them?  You are too busy for this nonsense, you have a mandatory session with the Health and Wellness Android today and you have profiles on the Colony Biologist and Pastor to get started on.
             </p>
 
-            <go-to location="#Kitchen"> Android </go-to>
+            <go-to location="#Android"> Android </go-to>
             <br/>
-            <go-to location="#Bathroom"> Biologist </go-to>
+            <go-to location="#Biologist"> Biologist </go-to>
             <br/>
-            <go-to location="#Outside"> Pastor </go-to>
+            <go-to location="#Pastor"> Pastor </go-to>
           </div>
         </div>
 
-
       </div>
 
-      <div id="Bathroom" class="zoomTarget level2">
+      <div id="Android2" class="zoomTarget shape shape-rotation-right level2">
         <div class="text">
-          You're in the bathroom
+            Android2
         </div>
       </div>
 
-      <div id="Outside" class="zoomTarget level2">
+      <div id="Biologist2" class="zoomTarget shape shape-rotation-right level2">
         <div class="text">
-          It's a beautiful day!
+          Biologist2
         </div>
       </div>
+
+      <div id="Pastor2" class="zoomTarget shape shape-rotation-right level2">
+        <div class="text">
+          Pastor2
+        </div>
+      </div>
+
     </div>
   </body>
 
