--- a/index.html
+++ b/index.html
@@ -14,70 +14,81 @@
 
   </head>
   <body class="zoomContainer">
-    <div id="a" class="zoomTarget level0">
-      <div id="Android" class="zoomTarget shape shape-rotation-left level2">
-        <div class="text">
-          This is the kitchen
-        </div>
-      </div>
+    <div id="fullScreen" class="zoomTarget level0">
+      <div id="Chapter1" class="zoomTarget level1">
+        <div id="Intro" class="zoomTarget level2 scene-container">
+          <div class="scene">
+            <img src="images/bgs/cabin.png" class="illustration" alt="cool picture">
+            <div class="text">
+              <p>
+              As the official historian for a new colony world its your privilege to record the events and preserve the unique heritage of what will no doubt be a thriving and successful community. Boundless opportunity and a place in history are with in your reach as you work side by side with your fellow colonists. I envy you a bright future on the colony world XB-137, surely in no time at all...
+              </p>
+            </div>
+          </div>
 
-      <div id="Biologist" class="zoomTarget shape shape-rotation-left level2">
-        <div class="text">
-          You're in the bathroom
-        </div>
-      </div>
+          <div class="scene">
+            <img src="images/bgs/cabin.png" class="illustration" alt="cabin">
+            <div class="text">
+              <p>
+              Ugh, official messages from the central worlds can be so overwrought; do they expect anyone to actually read them?  You are too busy for this nonsense, you have a mandatory session with the Health and Wellness Android today and you have profiles on the Colony Biologist and Pastor to get started on.
+              </p>
 
-      <div id="Pastor" class="zoomTarget shape shape-rotation-left level2">
-        <div class="text">
-          It's a beautiful day!
-        </div>
-      </div>
-
-      <div id="Intro" class="zoomTarget level2 scene-container">
-        <div class="scene">
-          <img src="images/bgtest.png" class="illustration" alt="cool picture">
-          <div class="text">
-            <p>
-            As the official historian for a new colony world its your privilege to record the events and preserve the unique heritage of what will no doubt be a thriving and successful community. Boundless opportunity and a place in history are with in your reach as you work side by side with your fellow colonists. I envy you a bright future on the colony world XB-137, surely in no time at all...
-            </p>
+              <go-to>
+                <img src="images/nextButton.png" location="#Android" alt="next" >
+              </go-to>
+<!--               <br/>
+              <go-to location="#Biologist"> Biologist </go-to>
+              <br/>
+              <go-to location="#Pastor"> Pastor </go-to> -->
+            </div>
           </div>
         </div>
 
-        <div class="scene">
-          <img src="images/GenericCircle.png" class="illustration" alt="cool picture">
+        <div id="Android" class="zoomTarget shape shape-rotation-left level2">
           <div class="text">
-            <p>
-            Ugh, official messages from the central worlds can be so overwrought; do they expect anyone to actually read them?  You are too busy for this nonsense, you have a mandatory session with the Health and Wellness Android today and you have profiles on the Colony Biologist and Pastor to get started on.
-            </p>
+            TB: Hello. Welcome to your first session, my chosen name is Miranda.  Remember nothing here is verboaten you should feel free to express yourself.  Lets dive in.
 
-            <go-to location="#Android"> Android </go-to>
-            <br/>
-            <go-to location="#Biologist"> Biologist </go-to>
-            <br/>
-            <go-to location="#Pastor"> Pastor </go-to>
+            You: Uh...
+
+            TB: Its perfectly normal to flounder around at during these things. Particularly with a non-human, I'm shore we'll be chums before long.  I'll tell you what, why don't we push this appointment off until tomorrow afternoon. Sea you then!
+
+            Looks like you're schedule has been re-arranged for you. Hopefully the biologist won't mind if you start with her.
           </div>
         </div>
 
-      </div>
+        <div id="Biologist" class="zoomTarget shape shape-rotation-left level2">
+          <div class="text">
+            You're in the bathroom
+          </div>
+        </div>
 
-      <div id="Android2" class="zoomTarget shape shape-rotation-right level2">
-        <div class="text">
-            Android2
+        <div id="Pastor" class="zoomTarget shape shape-rotation-left level2">
+          <div class="text">
+            It's a beautiful day!
+          </div>
         </div>
       </div>
 
-      <div id="Biologist2" class="zoomTarget shape shape-rotation-right level2">
-        <div class="text">
-          Biologist2
+      <div id="Chapter2" class="zoomTarget level1">
+
+        <div id="Android2" class="zoomTarget shape shape-rotation-right level2">
+          <div class="text">
+              Android2
+          </div>
+        </div>
+
+        <div id="Biologist2" class="zoomTarget shape shape-rotation-right level2">
+          <div class="text">
+            Biologist2
+          </div>
+        </div>
+
+        <div id="Pastor2" class="zoomTarget shape shape-rotation-right level2">
+          <div class="text">
+            Pastor2
+          </div>
         </div>
       </div>
-
-      <div id="Pastor2" class="zoomTarget shape shape-rotation-right level2">
-        <div class="text">
-          Pastor2
-        </div>
-      </div>
-
     </div>
   </body>
 
