--- a/index.html
+++ b/index.html
@@ -26,6 +26,17 @@
             </div>
           </div>
 
+
+     <!--      <div class="scene">
+            <img src="images/bgs/cabin.png" class="illustration" alt="cool picture">
+            <div class="text">
+              <p>
+              Another Scene
+              </p>
+            </div>
+          </div> -->
+
+
           <div class="scene">
             <img src="images/bgs/cabin.png" class="illustration" alt="cabin">
             <div class="text">
@@ -33,8 +44,8 @@
               Ugh, official messages from the central worlds can be so overwrought; do they expect anyone to actually read them?  You are too busy for this nonsense, you have a mandatory session with the Health and Wellness Android today and you have profiles on the Colony Biologist and Pastor to get started on.
               </p>
 
-              <go-to>
-                <img src="images/nextButton.png" location="#Android" alt="next" >
+              <go-to location="#Android1" >
+                <img src="images/nextButton.png" alt="next" >
               </go-to>
 <!--               <br/>
               <go-to location="#Biologist"> Biologist </go-to>
@@ -44,30 +55,100 @@
           </div>
         </div>
 
-        <div id="Android" class="zoomTarget shape shape-rotation-left level2">
-          <div class="text">
-            TB: Hello. Welcome to your first session, my chosen name is Miranda.  Remember nothing here is verboaten you should feel free to express yourself.  Lets dive in.
-
-            You: Uh...
-
-            TB: Its perfectly normal to flounder around at during these things. Particularly with a non-human, I'm shore we'll be chums before long.  I'll tell you what, why don't we push this appointment off until tomorrow afternoon. Sea you then!
-
-            Looks like you're schedule has been re-arranged for you. Hopefully the biologist won't mind if you start with her.
+        <div id="Android1" class="zoomTarget shape shape-rotation-left level2 scene-container">
+          <div class="scene">
+            <img src="images/Miranda/Scene_One_A.png" class="illustration" alt="cabin">
+            <div class="text">
+              <p>
+                TB: Hello. Welcome to your first session, my chosen name is Miranda.  Remember nothing here is verboaten you should feel free to express yourself.  Lets dive in.
+              </p>
+              <p>
+                You: Uh...
+              </p>
+            </div>
           </div>
+          <div class="scene">
+            <img src="images/Miranda/Scene_One_B.png" class="illustration" alt="cabin">
+            <div class="text">
+              <p>
+                TB: Its perfectly normal to flounder around at during these things. Particularly with a non-human, I'm shore we'll be chums before long.  I'll tell you what, why don't we push this appointment off until tomorrow afternoon. Sea you then!
+              </p>
+              <p>
+                Looks like you're schedule has been re-arranged for you. Hopefully the biologist won't mind if you start with her.
+              </p>
+              <go-to location="#Biologist1">
+                <img src="images/nextButton.png" alt="next" >
+              </go-to>
+            </div>
+          </div>
+
         </div>
 
-        <div id="Biologist" class="zoomTarget shape shape-rotation-left level2">
-          <div class="text">
-            You're in the bathroom
+        <div id="Biologist1" class="zoomTarget shape shape-rotation-left level2 scene-container">
+          <div class="scene">
+            <img src="images/Chamoun/Scene_One_A.png" class="illustration" alt="cabin">
+            <div class="text">
+              <p>
+                You: I really appreciate you letting me shadow you in the algae garden, Dr Chamoun I know we'd planned on a later time.
+              </p>
+              <p>
+                Dr: It's your job.
+              </p>
+              <p>
+                Dr: ...You might want to jot down some notes about these tanks. The re-purposing the ships fuel tanks saved on materials but we lost the first batch due to the repair nano. It's just not built to coexist with organics so we've had to design maintenance bot here on world.
+              </p>
+            </div>
           </div>
+
+          <div class="scene">
+            <img src="images/Chamoun/Scene_One_B.png" class="illustration" alt="cabin">
+            <div class="text">
+              <p>
+                Dr: Please don your mask while I take these readings, but feel free to record the proceedings.
+              </p>
+              <p>
+                You follow the busy scientist for several hour checking over the massive tanks and the algae they contain before heading over to the common to catch the first spiritual session lead by Ali.
+              </p>
+              <go-to location="#Pastor1">
+                <img src="images/nextButton.png" alt="next" >
+              </go-to>
+            </div>
+          </div>
+
         </div>
 
-        <div id="Pastor" class="zoomTarget shape shape-rotation-left level2">
-          <div class="text">
-            It's a beautiful day!
+        <div id="Pastor1" class="zoomTarget shape shape-rotation-left level2 scene-container">
+          <div class="scene">
+            <img src="images/Ali/Scene_One_A.png" class="illustration" alt="Pastor">
+            <div class="text">
+              <p>
+                You: That was a lovely service Ali.
+              </p>
+              <p>
+                Min: Why thank you. The first one is always the hardest. Still I'm very so many chose to attend and the common room worked as a worship space far better than I'd any right to hope. How are you finding the colony so far? What is your role? There is always so much to do and see.
+              </p>
+            </div>
           </div>
+
+          <div class="scene">
+            <img src="images/Ali/Scene_One_B.png" class="illustration" alt="cabin">
+            <div class="text">
+              <p>
+                You: I'm the historian I'll be interviewing everyone over the coming months and recording as much as I'm able.
+              </p>
+              <p>
+                Min: What a fascinating job with so many folks to meet. I look forward to seeing you again.
+              </p>
+              <p>
+                You after dinner you head back to the cramped space you call home while the fabricators are building more permanent residences. Tomorrow you'll get to do it all over again.
+              </p>
+              <go-to location="#Biologist2">
+                <img src="images/nextButton.png" alt="next" >
+              </go-to>
+            </div>
+          </div>
+
         </div>
-      </div>
 
       <div id="Chapter2" class="zoomTarget level1">
 
