outline final chapters

--- a/index.html
+++ b/index.html
@@ -235,13 +235,257 @@
               <p>
                 Min: Just as you say; it takes time. I've found my role frustrating from time to time, but then I remember I'm 137 light years from home and I get to see a new world take shape.
               </p>
-              <go-to location="#fullScreen">
+              <go-to location="#TheChoice">
                 <img src="images/nextButton.png" alt="next" >
               </go-to>
             </div>
           </div>
         </div>
       </div>
+
+      <div id="Chapter3" class="zoomTarget level1">
+
+        <div id="TheChoice" class="zoomTarget level2 scene-container">
+          <div id="TheChoicePart1">
+            <img src="images/bgs/cabin.png" class="illustration" alt="Chamoun">
+            <div class="text">
+              <p>
+                Your return to your room and check your messages. The first from Dr Chamoun:
+                "Just a quick note to say there will be a showing of Dr Strangelove in the common room tonight if you wanted to see a classic movie. It starts at 8 and there is no need to take notes. Hope to see you there."
+                </p>
+            </div>
+          </div>
+
+          <div id="TheChoicePart2">
+            <img src="images/bgs/cabin.png" class="illustration" alt="Chamoun">
+            <div class="text">
+              <p>
+                Miranda sends:
+                "The eggs in the fish hatchery are starting to hatch! I've tapped into the feeds. Your new porpoise in life:  stop by central processing tonight and view the miracle of new fish!"
+              </p>
+            </div>
+          </div>
+
+          <div id="TheChoicePart3">
+            <img src="images/bgs/cabin.png" class="illustration" alt="Chamoun">
+            <div class="text">
+              <p>
+                Ali's message is encrypted required verification before access:
+                "I've been working on a secret project and need someone to show it off to. Meet me in the storage bay tonight while everyone is at the movie."
+              </p>
+            </div>
+          </div>
+
+          <div id="TheChoicePart4">
+            <img src="images/bgs/cabin.png" class="illustration" alt="Chamoun">
+            <div class="text">
+              <p>
+                Who will you go see this evening:
+              </p>
+              <go-to location="#Biologist3"> Dr Chamoun for Movie night </go-to>
+              <br/>
+              <go-to location="#Android3"> Miranda and Baby Fish </go-to>
+              <br/>
+              <go-to location="#Pastor3"> Ali's Secret </go-to>
+            </div>
+          </div>
+
+        </div>
+
+        <div id="Biologist3" class="zoomTarget level2 scene-container">
+          <div id="Biologist3Part1">
+            <img src="images/bgs/community.png" class="illustration" alt="Chamoun">
+            <div class="text">
+              <p>
+                The movie was old but the company was excellent! You spend the evening talking with Dr Chamoun. You shrug off a few dirty looks from other audience members while the oblivious scientist expounds excitedly on the works of Stanley Kubrick. Long after everyone has gone you exchange goodbyes and head back to your quarters.
+                </p>
+                <go-to location="#Biologist4" >
+                  <img src="images/nextButton.png" alt="next" >
+                </go-to>
+            </div>
+          </div>
+        </div>
+        <div id="Android3" class="zoomTarget level2 scene-container">
+          <div id="Android3Part1">
+            <img src="images/Miranda/Scene_Three_A.png" class="illustration" alt="Chamoun">
+            <div class="text">
+              <p>
+                You find Miranda wired directly into a terminal near the computer core for the colony ship.  The android seems sluggish and takes a minute to notice you've arrived. Once you are noticed a nearby screen flickers to life. It turns out a large portion of Miranda's considerable processing capability has been dedicated to running image enhancement algorithms on the incoming hatchery video. A fortunate turn of events for you the views of the newborn fish are extra adorable while the overdone ocean puns are notably absent.  You spend a pleasant evening enjoying fish and each others company. As you depart for the night Miranda mentions it was a reel-y great evening.
+                </p>
+                <go-to location="#Android4" >
+                  <img src="images/nextButton.png" alt="next" >
+                </go-to>
+            </div>
+          </div>
+        </div>
+        <div id="Pastor3" class="zoomTarget level2 scene-container">
+          <div id="Pastor3Part1">
+            <img src="images/bgs/cargo.png" class="illustration" alt="Chamoun">
+            <div class="text">
+              <p>
+                You arrive in the darkened cargo bay to find Ali gesturing excitedly towards a container. As you approach he opens the lid. Inside in miniature is a cunningly crafted model of the colony from the former ship itself to mining facility in the foot hills. All the fiddly details are there and it doesn't take you long to locate the window to your room. After a few moments of silent inspection Ali points out that the Algae farm needs some work and the surrounding terrain needs to be filled in. You are quickly sucked into the project and spend the evening how beg borrow or steal scarce materials to help with the project.
+                </p>
+                <go-to location="#Pastor4" >
+                  <img src="images/nextButton.png" alt="next" >
+                </go-to>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+
+
+
+
+
+
+
+      <div id="AndroidEnding" class="zoomTarget level1">
+
+        <div id="Android4" class="zoomTarget level2 scene-container">
+          <div id="Android4Part1">
+            <img src="images/Miranda/Scene_Four_A.png" class="illustration" alt="Miranda">
+            <div class="text">
+              <p>
+                Android4
+              </p>
+              <go-to location="#Android5" >
+                <img src="images/nextButton.png" alt="next" >
+              </go-to>
+            </div>
+          </div>
+
+        </div>
+
+        <div id="Android5" class="zoomTarget level2 scene-container">
+          <div id="Android5Part1">
+            <img src="images/Miranda/Scene_Five_A.png" class="illustration" alt="Miranda">
+            <div class="text">
+              <p>
+                Android5
+              </p>
+              <go-to location="#Android6" >
+                <img src="images/nextButton.png" alt="next" >
+              </go-to>
+            </div>
+          </div>
+        </div>
+
+        <div id="Android6" class="zoomTarget level2 scene-container">
+          <div id="Android6Part1">
+            <img src="images/Miranda/Scene_Six_A.png" class="illustration" alt="Miranda">
+            <div class="text">
+              <p>
+                Android6
+              </p>
+              <go-to location="#fullScreen" >
+                <img src="images/nextButton.png" alt="next" >
+              </go-to>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+      <div id="BiologistEnding" class="zoomTarget level1">
+
+        <div id="Biologist4" class="zoomTarget level2 scene-container">
+          <div id="Biologist4Part1">
+            <img src="images/Chamoun/Scene_Four_A.png" class="illustration" alt="Chamoun">
+            <div class="text">
+              <p>
+                Biologist4
+              </p>
+              <go-to location="#Biologist5" >
+                <img src="images/nextButton.png" alt="next" >
+              </go-to>
+            </div>
+          </div>
+
+        </div>
+
+        <div id="Biologist5" class="zoomTarget level2 scene-container">
+          <div id="Biologist5Part1">
+            <img src="images/Chamoun/Scene_Five_A.png" class="illustration" alt="Chamoun">
+            <div class="text">
+              <p>
+                Biologist5
+              </p>
+              <go-to location="#Biologist6" >
+                <img src="images/nextButton.png" alt="next" >
+              </go-to>
+            </div>
+          </div>
+        </div>
+
+        <div id="Biologist6" class="zoomTarget level2 scene-container">
+          <div id="Biologist6Part1">
+            <img src="images/Chamoun/Scene_Six_A.png" class="illustration" alt="Chamoun">
+            <div class="text">
+              <p>
+                Biologist6
+              </p>
+              <go-to location="#fullScreen" >
+                <img src="images/nextButton.png" alt="next" >
+              </go-to>
+            </div>
+          </div>
+        </div>
+
+
+
+      </div>
+
+
+      <div id="PastorEnding" class="zoomTarget level1">
+
+        <div id="Pastor4" class="zoomTarget level2 scene-container">
+          <div id="Pastor4Part1">
+            <img src="images/Ali/Scene_Four_A.png" class="illustration" alt="Ali">
+            <div class="text">
+              <p>
+                Pastor4
+              </p>
+              <go-to location="#Pastor5" >
+                <img src="images/nextButton.png" alt="next" >
+              </go-to>
+            </div>
+          </div>
+
+        </div>
+
+        <div id="Pastor5" class="zoomTarget level2 scene-container">
+          <div id="Pastor5Part1">
+            <img src="images/Ali/Scene_Five_A.png" class="illustration" alt="Ali">
+            <div class="text">
+              <p>
+                Pastor5
+              </p>
+              <go-to location="#Pastor6" >
+                <img src="images/nextButton.png" alt="next" >
+              </go-to>
+            </div>
+          </div>
+        </div>
+
+        <div id="Pastor6" class="zoomTarget level2 scene-container">
+          <div id="Pastor6Part1">
+            <img src="images/Ali/Scene_Six_A.png" class="illustration" alt="Ali">
+            <div class="text">
+              <p>
+                Pastor6
+              </p>
+              <go-to location="#fullScreen" >
+                <img src="images/nextButton.png" alt="next" >
+              </go-to>
+            </div>
+          </div>
+        </div>
+
+      </div>
+
     </div>
   </body>
 
