add credits page

--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
               <p>
                 Android6
               </p>
-              <go-to location="#fullScreen" >
+              <go-to location="#credits" >
                 <img src="images/nextButton.png" alt="next" >
               </go-to>
             </div>
@@ -427,7 +427,7 @@
               <p>
                 Biologist6
               </p>
-              <go-to location="#fullScreen" >
+              <go-to location="#credits" >
                 <img src="images/nextButton.png" alt="next" >
               </go-to>
             </div>
@@ -477,7 +477,7 @@
               <p>
                 Pastor6
               </p>
-              <go-to location="#fullScreen" >
+              <go-to location="#credits" >
                 <img src="images/nextButton.png" alt="next" >
               </go-to>
             </div>
@@ -485,6 +485,39 @@
         </div>
 
       </div>
+
+
+      <div id="OtherScreens" class="zoomTarget level1">
+
+        <div id="credits" class="zoomTarget level2 scene-container">
+          <div id="Pastor4Part1">
+            <img src="images/Ali/Scene_Four_A.png" class="illustration" alt="Ali">
+            <div class="text">
+              <p>
+                Created by Sam Backus, James Curran, and Suzi Curran.
+              <p></p>
+                Environments are altered from the original images, generously shared by the following:
+              <p></p>
+                flickr users x-ray_delta_one, Ogilvy PR, and rob-young,
+                deviantart user dmaland,
+                pixabay user TobiasD,
+                and wikipedia contributors Alexander Vasenin, Acoriliteroce, Chris 73, Joi Ito, AndreyA, Brandopedia, P199, Don Serapio.
+              <p></p>
+                Character portraits altered from the original images, generously shared by Fungii on the Lemma Soft forums.
+              <p></p>
+                Ubuntu font license at http://font.ubuntu.com/licence/.
+
+              </p>
+              <go-to location="#fullScreen" >
+                <img src="images/nextButton.png" alt="next" >
+              </go-to>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
 
     </div>
   </body>
